--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,13 @@
     "php": ">=7.2",
     "spryker/event-behavior": "^1.8.0",
     "spryker/kernel": "^3.33.0",
+    "spryker/merchant": "^3.0.0",
     "spryker/merchant-product": "^0.1.1",
     "spryker/product": "^6.0.0",
     "spryker/product-page-search": "^3.2.0",
-    "spryker/product-page-search-extension": "^1.2.0"
+    "spryker/product-page-search-extension": "^1.2.0",
+    "spryker/publisher-extension": "^1.0.0",
+    "spryker/store": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*"
