--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,14 @@
     "spryker/store": "^1.0.0"
   },
   "require-dev": {
+    "spryker/category": "*",
     "spryker/code-sniffer": "*",
-    "spryker/search": "*"
+    "spryker/product": "*",
+    "spryker/product-attribute": "*",
+    "spryker/propel": "*",
+    "spryker/queue": "*",
+    "spryker/search": "*",
+    "spryker/testify": "*"
   },
   "suggest": {
     "spryker/search": "If you want to use Search plugins."
@@ -27,11 +33,16 @@
       "Spryker\\": "src/Spryker/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "SprykerTest\\": "tests/SprykerTest/"
+    }
+  },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "scripts": {
-    "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/",
-    "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/"
+    "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/",
+    "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/"
   },
   "extra": {
     "branch-alias": {
