--- a/tests/SprykerTest/Zed/MerchantProductSearch/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantProductSearch/codeception.yml
@@ -29,3 +29,4 @@ suites:
                 - \SprykerTest\Zed\Merchant\Helper\MerchantHelper
                 - \SprykerTest\Zed\ProductAttribute\Helper\ProductAttributeDataHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
+                - \SprykerTest\Zed\MerchantProduct\Helper\MerchantProductHelper
