--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
         "spryker/event-behavior": "^1.8.0",
         "spryker/kernel": "^3.33.0",
         "spryker/merchant": "^3.0.0",
-        "spryker/merchant-product": "^1.0.0",
+        "spryker/merchant-product": "^1.3.0",
         "spryker/product-page-search": "^3.2.0",
         "spryker/product-page-search-extension": "^1.2.0",
         "spryker/publisher-extension": "^1.0.0",
         "spryker/search-extension": "^1.0.0",
-        "spryker/store": "^1.0.0"
+        "spryker/store": "^1.0.0",
+        "spryker/transfer": "^3.27.0"
     },
     "require-dev": {
         "spryker/category": "*",
