FRW-1817 Fixed false positive test cases with Dynamic Multistore mode enabled. (#10862)
FRW-6382 Adjust StoreDependencyHelper and related tests to cover cases when there is no store provided

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "spryker/product-attribute": "*",
         "spryker/propel": "*",
         "spryker/queue": "*",
+        "spryker/rabbit-mq": "*",
         "spryker/search": "*",
         "spryker/store-extension": "*",
         "spryker/testify": "*"
