--- a/tests/SprykerTest/Zed/MerchantProductSearch/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantProductSearch/codeception.yml
@@ -31,7 +31,10 @@ suites:
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
                 - \SprykerTest\Zed\MerchantProduct\Helper\MerchantProductHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
-                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Client\RabbitMq\Helper\RabbitMqHelper
+                - \SprykerTest\Client\Testify\Helper\ClientHelper
+                - \SprykerTest\Client\Testify\Helper\ConfigHelper
     Business:
         path: Business
         actor: MerchantProductSearchBusinessTester
