--- a/tests/SprykerTest/Zed/MerchantProductSearch/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantProductSearch/codeception.yml
@@ -33,6 +33,7 @@ suites:
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
                 - \SprykerTest\Client\RabbitMq\Helper\RabbitMqHelper
+                - \SprykerTest\Client\Queue\Helper\QueueHelper
                 - \SprykerTest\Client\Testify\Helper\ClientHelper
                 - \SprykerTest\Client\Testify\Helper\ConfigHelper
     Business:
